--- a/index.html
+++ b/index.html
@@ -11,41 +11,61 @@
 <body>
     <div class="library-container">
         <div class="library-header">
-            <h2>My library</h2>
-            <button class="btn" id="new-book-btn">New Book</button>
+            <h1>My Library</h1>
         </div>
         <table id="library-table">
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Pages</th>
-                <th>Read status</th>
-                <th></th>
-            </tr>
+            <colgroup>
+                <col style="width:30%">
+                <col style="width:25%">
+                <col style="width:15%">
+                <col style="width:15%">
+                <col style="width:15%">
+            </colgroup>  
+            <tbody>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Pages</th>
+                    <th>Read status</th>
+                    <th><button class="btn" id="new-book-btn">New Book</button></th>
+                </tr>
+            </tbody>
         </table>
     </div>
     <div class="form-popup">
         <form class="form-container" onsubmit="addBookToLibrary();return false;">
-            <h2>New Book</h2>
+            <div class="title">New Book</div>
 
-            <label for="title">Title: </label>
-            <input type="text" id="title" required>
+            <div class="input-container">
+                <label for="title">Title: </label>
+                <input type="text" id="title" required>
+            </div>
 
-            <label for="author">Author: </label>
-            <input type="text" id="author" required>
+            <div class="input-container">
+                <label for="author">Author: </label>
+                <input type="text" id="author" required>
+            </div>
 
-            <label for="pages">Pages: </label>
-            <input type="number" id="pages" min="1" required>
+            <div class="input-container">
+                <label for="pages">Pages: </label>
+                <input type="number" id="pages" min="1" required>
+            </div>
 
-            <label for="read-status">Read yet? </label>
-            <select id="read-status" size="2" required>
-                <option value="Yes">Yes</option>
-                <option value="No">No</option>
-            </select>
-
+            <div class="input-container">
+                <label for="read-status">Have you read it?</label>
+                <select id="read-status" size="2" required>
+                    <option value="Yes">Yes</option>
+                    <option value="No">No</option>
+                </select>
+            </div>
+                
             <button type="submit" class="btn submit">Add</button>
             <button type="button" class="btn cancel">Cancel</button>
         </form>
     </div>
+    <!-- <label class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label> -->
 </body>
 </html>
